# rays.rust

./: .gitignore  .travis.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: dependabot.yml  rust-clippy.yml  rust.yml
demo/: ci-smoke-test.json  demo.json  scenes.md
demo/scenes/: block-terrain.json  fireworks.json  noise-medium-test.json  noise-simple-demo.json  noise-test-updated.json  noise-test.json  ocean-1.json  ocean-2.json  ocean-boat.json  sky-clouds.json  sky-custom.json  sky-presets.json  sky-sunset-clouds.json  sky-sunset.json  spheres-on-water.json
demo/scenes/spheres/: spheres.json
docs/: cloud_implementation.md
src/: bbox.rs  bvh.rs  camera.rs  checkeredplane.rs  color.rs  constants.rs  geometry.rs  intersection.rs  light.rs  main.rs  material.rs  noise.rs  ocean.rs  octree.rs  paint.rs  participatingmedia.rs  primitive.rs  ray.rs  rendercontext.rs  scene.rs  scenefile.rs  scenegraph.rs  sceneobject.rs  skysphere.rs  sphere.rs  trace.rs  wireframe.rs
src/material/: ambient.rs  dielectric.rs  diffuse_light.rs  functions.rs  lambertian.rs  legacy.rs  metallic.rs  mod.rs  model.rs  noise.rs  normal.rs  plastic.rs  specular.rs  texture.rs
src/procedural/: box_terrain.rs  fireworks.rs
src/shapes/: bbox.rs  csg.rs  geometry.rs  infinite.rs  mesh.rs  plane.rs  repeating_mesh.rs  sphere.rs  transform.rs  triangle.rs
