[package]

name = "rays"
version = "0.0.1"

[dependencies]
image = "0.21.3"
nalgebra = "0.19.0"
time = "0.1"
rand = "0.6"
clap = "2.26.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"
rayon="1.0"
tobj="0.1.6"
ordered-float = "1.0.1"
num-complex = "0.2"
rustfft="2.1"
termcolor="1.0.5"
