[package]

name = "rays"
version = "0.0.1"
edition = "2024"

[dependencies]
image = "0.25.5"
nalgebra = "0.33.2"
rand = "0.6"
clap = { version = "4.5.32", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"
rayon="1.0"
tobj="0.1.6"
ordered-float = "5.0.0"
num-complex = "0.4.6"
rustfft="2.1"
termcolor="1.0.5"
